# tmignore

./: .editorconfig  .gitignore  .swiftformat  .swiftlint.yml  Makefile  Package.resolved  Package.swift  README.md  com.samuelmeuli.time-machine-ignore.plist  homebrew.tmignore.plist  install.py  pyproject.toml  time_machine_ignore.py  tmignore.rb  uninstall.py
.github/workflows/: build.yml  lint.yml  release.yml
.hooks/: pre-commit
Sources/tmignore/: Cache.swift  Config.swift  Git.swift  TimeMachine.swift  main.swift  utils.swift
tmignore/: Cache.swift  Config.swift  Git.swift  TimeMachine.swift  logging.swift  main.swift  utils.swift
tmignore.xcodeproj/: project.pbxproj
tmignore.xcodeproj/xcshareddata/xcschemes/: tmignore.xcscheme
