[tool.poetry]
name = "time-machine-ignore"
version = "0.1.0"
description = "Exclude development files from Time Machine backups"
authors = ["Samuel Meuli <me@samuelmeuli.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = { version = "^18.3-alpha.0", allows-prereleases = true }
flake8 = "^3.7"
isort = "^4.3"

[tool.black]
line-length = 100

[tool.isort]
combine_as_imports = true
combine_star = true
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
